Fix stretching images after recent figure style change

--- a/src/_sass/base/_base.scss
+++ b/src/_sass/base/_base.scss
@@ -170,7 +170,7 @@ dd {
 
   .site-figure-container {
     flex: 0 1 auto;
-    width: 100%;
+    max-width: 100%;
 
     img { width: 100%; }
 
